# SOF2MPSDK

./: .gitignore  readme.txt
code/: CMakeLists.txt  Sof2MP.dsp  Sof2MP.dsw  all.bat
code/cgame/: CMakeLists.txt  animtable.h  cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_gametype.c  cg_gore.c  cg_info.c  cg_light.c  cg_lights.h  cg_local.h  cg_localents.c  cg_main.c  cg_miscents.c  cg_newDraw.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_syscalls.asm  cg_syscalls.c  cg_view.c  cg_weaponinit.c  cg_weapons.c  cgame.bat  cgame.q3asm  sof2_cgame.dsp  tr_types.h
code/docs/: SoF2_Setting_Up_Compiler.doc
code/game/: CMakeLists.txt  ai_main.c  ai_main.h  ai_util.c  ai_wpnav.c  be_aas.h  be_ai_char.h  be_ai_chat.h  be_ai_gen.h  be_ai_goal.h  be_ai_move.h  be_ai_weap.h  be_ea.h  bg_gametype.c  bg_lib.c  bg_lib.h  bg_local.h  bg_misc.c  bg_player.c  bg_pmove.c  bg_public.h  bg_slidemove.c  bg_weapons.c  bg_weapons.h  botlib.h  chars.h  g_active.c  g_antilag.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_gametype.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_missile.c  g_mover.c  g_public.h  (+20 more)
code/gametype/: CMakeLists.txt  gt_public.h  gt_syscalls.asm  gt_syscalls.c  gt_syscalls.h
code/gametype/gt_ctf/: gt_ctf.bat  gt_ctf.dsp  gt_ctf.q3asm  gt_local.h  gt_main.c
code/gametype/gt_dem/: gt_dem.bat  gt_dem.dsp  gt_dem.q3asm  gt_local.h  gt_main.c
code/gametype/gt_dm/: gt_dm.bat  gt_dm.dsp  gt_dm.q3asm  gt_main.c
code/gametype/gt_elim/: gt_elim.bat  gt_elim.dsp  gt_elim.q3asm  gt_local.h  gt_main.c
code/gametype/gt_inf/: gt_inf.bat  gt_inf.dsp  gt_inf.q3asm  gt_local.h  gt_main.c
code/gametype/gt_tdm/: gt_main.c  gt_tdm.bat  gt_tdm.dsp  gt_tdm.q3asm
code/ghoul2/: G2.h  G2_gore_shared.h
code/qcommon/: tags.h
code/ui/: CMakeLists.txt  keycodes.h  sof2_ui.dsp  ui.bat  ui.q3asm  ui_atoms.c  ui_gameinfo.c  ui_local.h  ui_main.c  ui_players.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.asm  ui_syscalls.c
ui/: background_task.menu  cdkey.menu  connect.menu  createfavorite.menu  createserver.menu  credits.menu  error.menu  findplayer.menu  hud.menu  ingame.menu  ingame.txt  ingame_about.menu  ingame_addbot.menu  ingame_callvote.menu  ingame_identity_blue.menu  ingame_identity_red.menu  ingame_leave.menu  ingame_network.menu  ingame_objectives.menu  ingame_outfitting.menu  ingame_player.menu  ingame_radio.menu  ingame_setup.menu  ingame_team.menu  ingame_vote.menu  invalid_version.menu  invalid_version_ignore.menu  joinserver.menu  loading.menu  main.menu  menudef.h  menus.txt  mods.menu  password.menu  patch_download.menu  patch_ignore.menu  patch_info.menu  patch_location.menu  quit.menu  serverinfo.menu  (+16 more)
